# ruc-helper

./: .gitignore  CONTEXT.md  README.md  auto_course.py  config.example.json  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: grades.py  monitor.py  settings.py  students.py
backend/app/services/: auth.py  grade.py  monitor.py
cli/: auto_course.py  auto_grade.py  get_token.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: AddStudentDialog.vue  GradeTable.vue  MonitorLog.vue  SmtpSettings.vue  StudentCard.vue
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  StudentDetail.vue
nginx/: Dockerfile  nginx.conf
